2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_icmp.h, nasl/nasl_ip.h, nasl/nasl_raw.h,
	nasl/nasl_tcp.h, nasl/nasl_udp.h: Added missing header
	with author, copyright and license. Since this header
	file was part of libnasl, the full header of
	libnasl/nasl/capture_packet.c is used as a typical
	representative of this module.

	* nasl/proto.h: Added missing header. Copied from ntlmssp.h.

	* COPYING: Completed.

2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/smb_crypt.h: Added missing header with author, copyright
	and license. Since this header file was developed for smb_crypt.c
	the full header of smb_crypt.c is used for smb_crypt.h as well.
	
	* nasl/smb_signing.h: Added missing header with author, copyright
	and license. Since this header file was developed for smb_signing.c
	the full header of smb_signing.c is used for smb_signing.h as well.

	* nasl/tests/Makefile, nasl/tests/signed.nasl,
	nasl/tests/test_script_signing.sh: Added missing header.

2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING.BSD3: New.

	* nasl/md4.h: Added missing header with author, copyright
	and license. Since this header file was developed for md4.c
	the full header of md4.c is used for md4.h as well.

	* nasl/md5.h: Added missing header with author, copyright
	and license. Since this header file was developed for md5.c
	the full header of md5.c is used for md5.h as well.

	* nasl/nasl.h: Added missing header with author, copyright
	and license. Since this header file was developed for nasl.c
	the full header of nasl.c is used for nasl.h as well.

	* MANIFEST: Updated.

2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* configure: Updated.

2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	This patch removes the config.h file of nasl which was
	a static version derived from the previous libnasl module.
	It contained static settings like LINUX=1 and therfore