@@ -1,3 +1,9 @@
+2010-07-28  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* nasl/CMakeLists.txt: Removed duplicate calls to external programs,
+	consolidated calls in one place. Moved the setting of link_directories
+	up to ensure it is set before the first target_link_libraries call.
+
 2010-07-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* nasl/nasl_icmp.h, nasl/nasl_ip.h, nasl/nasl_raw.h,
